Simplify EventContext and naming conventions
- Merge errorReason/warningReason into a single reason field; level picks
  the emit key. Removes the 'must clear the other slot' footgun and the
  third member's invariant maintenance.
- Make TimedScope iteration use entry.getKey() and the public interface
  methods; drop the TimedScopeImpl cast plus the now-unused key()/
  elapsedMsAtClose() helpers and ctor param.
- Flatten the switch in set() to if/else; drops the confusing OVERWRITE/
  default fall-through.
- Make all mutator methods return EventContext for consistent fluent API
  (initialize, setLevel, setToInfo/Warning/Error, suppress, suppressFields).
- Lazy-init privateData, timers, counters, suppressedFields so events
  that don't use them skip the allocations. Accessors return Map.of()
  when unallocated.
- Drop the redundant LinkedHashMap copy of GlobalEventContext.snapshot();
  putAll directly into the out map.
- Use Objects.requireNonNull in setCustomTimestamp and Configuration
  .naming() instead of hand-rolled IAE throws; test updated to expect NPE.
- Default-method exception field accessors on NamingConvention so SPIFFY
  and LEGACY (which had identical exception strings) share one source of
  truth; JAVA still overrides them.
- Use Collections.addAll in suppressFields.

Net: -18 lines, all tests pass.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>